Se cambió puerto a 8081

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,7 +1,7 @@
 # ================================================
 # SERVIDOR - Puerto de desarrollo
 # ================================================
-server.port=8080
+server.port=8081
 
 # ================================================
 # DATASOURCE - Configuración específica de DEV
@@ -49,10 +49,10 @@ springdoc.api-docs.enabled=true
 # ================================================
 # JWT - SECRET y tiempos de expiración
 # ================================================
-security.jwt.key=wsrCitaMedica_KEY
+security.jwt.key=wsr_authentication_service_KEY
 security.jwt.secret-base64=Nr1RzuxLf4cAjVzMU5PLVx6kDYdmN6FD56VAq2Hn/mA=
 security.jwt.secret.key=$2a$12$.qy.6yn0geTRmkwaaPaJMewc72nlyfwPjwgGB.4SjEbfTYElPUavi
-security.jwt.issuer=wsrcitamedica
+security.jwt.issuer=wsr_authentication_service
 security.jwt.max-attempts=5
 security.jwt.temp-lock-minutes=5
 security.jwt.expiration=1800000
