Correción de properties

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -18,7 +18,7 @@ spring.datasource.hikari.maximum-pool-size=10
 # LOGGING - Nivel DEBUG para desarrollo
 # ================================================
 logging.level.root=INFO
-logging.level.com.jhontruse.wsrcitamedica=DEBUG
+logging.level.com.jhontruse.wsr_authentication_service=DEBUG
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.springframework.security=DEBUG
 logging.level.org.springframework.jdbc.core=DEBUG
